DestinationTopicPropertiesFactory refactoring
* Refactor `DestinationTopicPropertiesFactory` and `DestinationTopicPropertiesFactoryTests`

* remove method ambiguity in  `getIndexInBackoffValues()` and cleanup method `createProperties()`